[gd_scene load_steps=4 format=3 uid="uid://dg0k2wxud2cn3"]

[ext_resource type="Script" path="res://scripts/talent_tree/buy_node_window.gd" id="1_18guc"]
[ext_resource type="FontFile" uid="uid://bnvfuvvfwodw3" path="res://assets/ui/fonts/source/GolosText-Medium.ttf" id="2_5bru7"]
[ext_resource type="FontFile" uid="uid://cw1i5e61s6ha0" path="res://assets/ui/fonts/source/GolosText-Regular.ttf" id="3_unpmw"]

[node name="BuyWindow" type="PanelContainer"]
anchors_preset = 10
anchor_right = 1.0
offset_bottom = 400.0
grow_horizontal = 2
size_flags_vertical = 4
script = ExtResource("1_18guc")

[node name="Margin" type="MarginContainer" parent="."]
custom_minimum_size = Vector2(0, 400)
layout_mode = 2
theme_override_constants/margin_left = 10
theme_override_constants/margin_top = 10
theme_override_constants/margin_right = 10
theme_override_constants/margin_bottom = 10

[node name="Control" type="Control" parent="Margin"]
layout_mode = 2

[node name="VLayout" type="VBoxContainer" parent="Margin/Control"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2

[node name="MenuBar" type="HBoxContainer" parent="Margin/Control/VLayout"]
layout_mode = 2

[node name="CloseWindow" type="Button" parent="Margin/Control/VLayout/MenuBar"]
custom_minimum_size = Vector2(80, 0)
layout_mode = 2
size_flags_horizontal = 2
theme_override_fonts/font = ExtResource("2_5bru7")
text = "Close
"

[node name="NodeName" type="Label" parent="Margin/Control/VLayout/MenuBar"]
layout_mode = 2
size_flags_horizontal = 3
size_flags_stretch_ratio = 6.0
theme_override_fonts/font = ExtResource("2_5bru7")
text = "Node Name"
horizontal_alignment = 1
vertical_alignment = 1

[node name="NodeInfo" type="VBoxContainer" parent="Margin/Control/VLayout"]
custom_minimum_size = Vector2(0, 330)
layout_mode = 2
size_flags_vertical = 3

[node name="NodeDescription" type="VBoxContainer" parent="Margin/Control/VLayout/NodeInfo"]
custom_minimum_size = Vector2(0, 250)
layout_mode = 2
size_flags_vertical = 3

[node name="RichTextLabel2" type="RichTextLabel" parent="Margin/Control/VLayout/NodeInfo/NodeDescription"]
custom_minimum_size = Vector2(0, 40)
layout_mode = 2
theme_override_fonts/normal_font = ExtResource("3_unpmw")

[node name="RichTextLabel" type="RichTextLabel" parent="Margin/Control/VLayout/NodeInfo/NodeDescription"]
custom_minimum_size = Vector2(0, 100)
layout_mode = 2
size_flags_vertical = 3
theme_override_fonts/normal_font = ExtResource("3_unpmw")
text = "I am a node, very very cool node with interesting description
"

[node name="NodeParameters" type="VBoxContainer" parent="Margin/Control/VLayout/NodeInfo"]
layout_mode = 2
size_flags_horizontal = 3
size_flags_vertical = 3

[node name="RichTextLabel" type="RichTextLabel" parent="Margin/Control/VLayout/NodeInfo/NodeParameters"]
layout_mode = 2
size_flags_vertical = 3
theme_override_fonts/normal_font = ExtResource("2_5bru7")
text = "Strength: 100
Cost: 150
"

[node name="TextureRect" type="TextureRect" parent="Margin/Control/VLayout/NodeInfo"]
layout_mode = 2
size_flags_horizontal = 10
expand_mode = 2

[node name="BuyInfo" type="HBoxContainer" parent="Margin/Control/VLayout"]
layout_mode = 2
size_flags_vertical = 10

[node name="BuyNode" type="Button" parent="Margin/Control/VLayout/BuyInfo"]
custom_minimum_size = Vector2(80, 0)
layout_mode = 2
size_flags_horizontal = 10
theme_override_fonts/font = ExtResource("2_5bru7")
text = "Buy"

[connection signal="pressed" from="Margin/Control/VLayout/MenuBar/CloseWindow" to="." method="hide"]
[connection signal="pressed" from="Margin/Control/VLayout/BuyInfo/BuyNode" to="." method="try_to_buy_node"]
